--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -1,6 +1,6 @@
-- hosts: localhost
-  vars:
-      ansible_python_interpreter: /usr/bin/python3
+- hosts: master
+#   vars:
+#       ansible_python_interpreter: /usr/bin/python3
 
   tasks:
     - package:
