--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -24,3 +24,14 @@
       
     - debug:
         var: ansible_galaxy_output
+        
+        
+    # Install "foo" and "bar" snap
+    
+    - community.general.snap:
+        name:
+          - helm
+      register: snap_out
+      
+    - debug:
+        var: snap_out
