--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -19,7 +19,14 @@
 #           - ansible[azure]
 #         state: forcereinstall
 
-
+    - shell: ansible --version
+      register: ansible_v_output
+      
+      
+    - debug:
+        var: ansible_v_output
+      
+      
     - shell: ansible-galaxy collection install community.general
       register: ansible_galaxy_output
       
