--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -3,12 +3,20 @@
 #       ansible_python_interpreter: /usr/bin/python3
 
   tasks:
-    - package:
-        name:
-        - jq
-        - ansible=2.9
-        state: present
-      become: yes
+  
+
+  - apt_key:
+    keyserver: keyserver.ubuntu.com
+    id: 93C4A3FD7BB9C367
+    
+    
+  - apt:
+      pkg:
+      - jq
+      - ansible
+      update_cache: yes
+    become: yes    
+    
 
     - pip:
         name: pip
