--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -18,17 +18,19 @@
         name:
           - software-properties-common
         update_cache: yes
+      become: yes 
         
     - apt_repository: 
         repo: ppa:ansible/ansible
         state: present
         update_cache: yes
+      become: yes 
       
     - apt: 
         name:
           - ansible
         update_cache: yes
-      
+      become: yes 
            
     - shell: ansible --version
       register: ansible_v_output
