--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -13,6 +13,14 @@
     - pip:
         name: pip
         state: latest
+        
+
+    - pip:
+        name: 
+          - pyhelm
+        state: present
+        
+        
 
     - apt: 
         name:
