--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -2,29 +2,15 @@
   vars:
       ansible_python_interpreter: /usr/bin/python3
 
-  tasks:
-    
+  tasks:    
     - helm:
         host: localhost
         chart:
-          name: memcached
-          version: 0.4.0
+          name: "{{chart_name}}"
           source:
-            type: repo
-            location: https://kubernetes-charts.storage.googleapis.com
+            type: "{{repo_type}}"
+            location: "{{repo_url}}"
         state: present
-        name: my-memcached
-        namespace: default
-    
-    
-#     - helm:
-#         host: localhost
-#         chart:
-#           name: "{{chart_name}}"
-#           source:
-#             type: "{{repo_type}}"
-#             location: "{{repo_url}}"
-#         state: present
-#         name: "{{name}}"
-#         namespace: "{{namespace}}"
+        name: "{{name}}"
+        namespace: "{{namespace}}"
       
