--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -26,6 +26,7 @@
     - apt: 
         name:
           - software-properties-common
+          - apt-transport-https 
         update_cache: yes
       become: yes 
         
@@ -34,6 +35,13 @@
         state: present
         update_cache: yes
       become: yes 
+      
+    - apt_repository: 
+        repo: deb https://baltocdn.com/helm/stable/debian/ all main
+        state: present
+        update_cache: yes
+      become: yes 
+      
       
     - apt: 
         name:
