--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -1,9 +1,11 @@
 - hosts: master
   vars:
       ansible_python_interpreter: /usr/bin/python3
+  collections:
+    - community.kubernetes.helm
 
   tasks:    
-    - community.kubernetes.helm:
+    - helm:
         name: test
         chart_ref: stable/prometheus
         release_namespace: monitoring
