--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -37,7 +37,7 @@
     - apt_repository: 
         repo: deb https://baltocdn.com/helm/stable/debian/ all main
         state: present
-        update_cache: yes
+#         update_cache: yes
       become: yes 
       
     - apt: 
