--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -7,7 +7,6 @@
     - package:
         name:
           - jq
-          - git
         state: present
       become: yes 
 
@@ -18,13 +17,11 @@
     - pip:
         name: 
           - pyhelm
-          - PyYAML
         state: present
 
     - apt: 
         name:
           - software-properties-common
-          - apt-transport-https 
         update_cache: yes
       become: yes 
         
@@ -34,19 +31,22 @@
         update_cache: yes
       become: yes 
       
-    - apt_repository: 
-        repo: deb https://baltocdn.com/helm/stable/debian/ all main
-        state: present
-#         update_cache: yes
-      become: yes 
       
     - apt: 
         name:
           - ansible
-          - helm
         update_cache: yes
       become: yes 
 
     - shell: ansible-galaxy collection install -p $HOME/.ansible/roles community.kubernetes
       register: ansible_galaxy_output
+    
+    - shell: ansible-galaxy collection install -p $HOME/.ansible/roles community.general.snap
+    
+    - community.general.snap:
+        name:
+          - helm
+        classic: yes
+      
+     
       
