--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -2,7 +2,7 @@
   vars:
       ansible_python_interpreter: /usr/bin/python3
   collections:
-    - community.kubernetes.helm
+    - community.kubernetes
 
   tasks:    
     - helm:
