--- a/install_requirements.yaml
+++ b/install_requirements.yaml
@@ -5,9 +5,12 @@
     - community.general
   tasks:
     - apt:
-        name: jq
+        name: "{{item}}"
         update_cache: yes
       become: yes
+      with_items:
+      - "jq"
+      - "pip"
 
     - pip:
         name: pip
