--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -22,6 +22,13 @@
     - pause:
         seconds: 2
       
+    - shell: kubectl get pod/"{{name}}" -o json
+      register: kubectl_get_pods
+
+    - debug:
+        var: kubectl_get_pods
+      when: status is defined
+    
       
     - shell: kubectl get pod/"{{name}}" -o json
       register: kubectl_get_pods
@@ -30,7 +37,5 @@
   
   
 
-    - debug:
-        var: kubectl_get_pods
-      when: status is defined
+
       
