--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -24,7 +24,7 @@
       when: status is defined
 
     - debug:
-        var: kubectl_get_pods.stdout|from_json|
+        var: kubectl_get_pods.stdout|from_json
       when: status is defined
     
       
