--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -30,7 +30,7 @@
       
     - shell: kubectl get pod/"{{name}}" -o json
       register: kubectl_get_pods
-      until: kubectl_get_pods.stdout|from_json|json_query('items[*].status.phase')|unique == ["{{status}}"]
+      until: kubectl_get_pods.stdout|from_json|json_query('status.phase')|unique == ["{{status}}"]
       when: status is defined
   
   
