--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -26,6 +26,8 @@
     - shell: kubectl get pod/"{{helm_name}}" -o json
       register: kubectl_get_pods
       until: kubectl_get_pods.stdout|from_json|json_query('status.phase')|unique == ["{{status}}"]
+      retries: 10
+      delay: 5
       when: status is defined
   
   
