--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -21,7 +21,7 @@
             
     - shell: kubectl get pod/"{{helm_name}}" -o json
       register: kubectl_get_pods
-      until: kubectl_get_pods.stdout|from_json|json_query('status.phase')| == ["{{status}}"]
+      until: kubectl_get_pods.stdout|from_json|json_query('status.phase==`"{{status}}"`')
       retries: 150
       delay: 10
       when: status is defined
