--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -6,7 +6,10 @@
   
     - shell: helm repo add "{{repo_name}}" "{{repo_url}}"
     
-    - local_action: copy content="{{ values }}" dest=/tmp/helm_values.yaml
+    - set_fact:
+        random_name: "helm_values_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}"
+    
+    - local_action: copy content="{{ values }}" dest=/tmp/"{{random_name}}".yaml
     
     - copy:
         src: /tmp/helm_values.yaml
