--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -9,7 +9,7 @@
     - set_fact:
         random_name: "helm_values_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}"
     
-    - local_action: copy content="{{ values }}" dest=/tmp/"{{random_name}}".yaml
+    - local_action: copy content="{{ values }}" dest=/tmp/"{{random_name}}"_"{{helm_name}}".yaml
     
     - copy:
         src: /tmp/helm_values.yaml
@@ -19,7 +19,7 @@
       ignore_errors: yes
     
     
-    - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f /tmp/helm_values.yaml
+    - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f /tmp/"{{random_name}}"_"{{helm_name}}".yaml
       register: helm_install_output
             
     - shell: kubectl get pod/"{{helm_name}}" -o json
