--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -10,7 +10,7 @@
         random_name: "helm_values_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}"
       when: values is defined
     
-    - local_action: copy content="{{ values }}" dest=/tmp/{{random_name}}_{{helm_name}}.yaml
+    - local_action: copy content="{{ values }}" dest=/tmp/"{{random_name}}_{{helm_name}}".yaml
       when: values is defined
     
     - copy:
