--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -7,7 +7,7 @@
     - shell: helm repo add "{{repo_name}}" "{{repo_url}}"
     
     - set_fact:
-        random_name: "/tmp/{{helm_name}}_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}.yaml"
+        random_name: "/tmp/{{helm_name}}_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}.json"
     
     - local_action: copy content="{{ values }}" dest={{random_name}}
     
