--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -23,6 +23,8 @@
 #     - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
     - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
       register: helm_install_output
+      until: helm_install_output.rc == 0
+      retries: 5
             
     - shell: kubectl get pod/"{{helm_name}}" -o json
       register: kubectl_get_pods
