--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -20,8 +20,8 @@
       ignore_errors: yes
     
     
-#     - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
-    - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+    - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+#     - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
       register: helm_install_output
       until: helm_install_output.rc == 0
       retries: 5
