--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -40,13 +40,13 @@
 
 
     - debug: 
-        var: argo_token
+        var: argo_token.stdout
       
       
     - set_fact:
         credential:
           token_type: argo_token
-          token: "{{argo_token}}"
+          token: "{{argo_token.stdout}}"
       when: chart_name == "argo/argo-workflows"
       
   
