--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -49,7 +49,7 @@
           argo_token: 
             token_type: argo_token
             token: "{{argo_token.stdout}}"
-      when: status is defined
+      when: chart_name == "argo/argo-workflows"
       
   
       
