--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -9,12 +9,15 @@
     
     - set_fact:
         random_name: "/tmp/{{helm_name}}_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}.json"
+      when: values is defined
     
     - local_action: copy content="{{ values }}" dest={{random_name}}
+      when: values is defined
     
     - copy:
         src: "{{random_name}}"
         dest: "{{random_name}}"
+      when: values is defined
      
     - shell: helm uninstall "{{helm_name}}"
       ignore_errors: yes
@@ -25,6 +28,15 @@
       register: helm_install_output
       until: helm_install_output.rc == 0
       retries: 5
+      when: values is defined
+      
+      
+    - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}" 
+      register: helm_install_output
+      until: helm_install_output.rc == 0
+      retries: 5
+      when: values is not defined
+      
             
     - shell: kubectl get pod/"{{helm_name}}" -o json
       register: kubectl_get_pods
