--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -7,26 +7,29 @@
     - shell: helm repo add "{{repo_name}}" "{{repo_url}}"
     
     - set_fact:
-        random_name: "/tmp/{{helm_name}}_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}.yaml"
-    
-    - local_action: copy content="{{ values }}" dest={{random_name}}
-    
+        random_name: "helm_values_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}"
+
+    - local_action: copy content="{{ values }}" dest=/tmp/{{random_name}}_{{helm_name}}.yaml
+
     - copy:
-        src: "{{random_name}}"
-        dest: "{{random_name}}"
-     
+        src: /tmp/{{random_name}}_{{helm_name}}.yaml
+        dest: /tmp/{{random_name}}_{{helm_name}}.yaml
+
     - shell: helm uninstall "{{helm_name}}"
       ignore_errors: yes
-    
-    
-    - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+
+
+    - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f /tmp/{{random_name}}_{{helm_name}}.yaml
       register: helm_install_output
-            
+
     - shell: kubectl get pod/"{{helm_name}}" -o json
       register: kubectl_get_pods
       until: kubectl_get_pods.stdout|from_json|json_query('status.phase==`"{{status}}"`')
       retries: 150
       delay: 10
       when: status is defined
-  
+
+
+
+
       
