--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -27,14 +27,16 @@
     - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
       register: helm_install_output
       until: helm_install_output.rc == 0
-      retries: 5
+      retries: 10
+      delay: 1
       when: values is defined
       
       
     - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}" 
       register: helm_install_output
       until: helm_install_output.rc == 0
-      retries: 5
+      retries: 10
+      delay: 1
       when: values is not defined
       
             
