--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -4,8 +4,8 @@
       ansible_python_interpreter: /usr/bin/python3
 
   tasks:    
-  
-    - shell: helm repo add "{{repo_name}}" "{{repo_url}}"
+    - name: Add "{{repo_name}}" "{{repo_url}}"
+      shell: helm repo add "{{repo_name}}" "{{repo_url}}"
     
     - set_fact:
         random_name: "/tmp/{{helm_name}}_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}.json"
@@ -18,11 +18,11 @@
         src: "{{random_name}}"
         dest: "{{random_name}}"
       when: values is defined
-     
+
     - shell: helm uninstall "{{helm_name}}"
       ignore_errors: yes
     
-    
+    - name: install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
 #     - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
     - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
       register: helm_install_output
