--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -24,7 +24,7 @@
     
     - name: install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
 #     - shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
-    - shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+      shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
       register: helm_install_output
       until: helm_install_output.rc == 0
       retries: 10
