--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -6,7 +6,9 @@
   tasks:    
     - name: Add "{{repo_name}}" "{{repo_url}}"
       shell: helm repo add "{{repo_name}}" "{{repo_url}}"
-    
+      retries: 5
+      delay: 1    
+
     - set_fact:
         random_name: "/tmp/{{helm_name}}_{{ lookup('password', '/dev/null chars=ascii_lowercase,digits length=8') }}.json"
       when: values is defined
