--- a/install_chart.yaml
+++ b/install_chart.yaml
@@ -37,16 +37,18 @@
       shell: helm uninstall "{{helm_name}}"
       ignore_errors: yes
 
-    - name: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
-      shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+    - name: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+#       shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
+      shell: helm install "{{helm_name}}" "{{chart_name}}"  -f {{random_name}}
       register: helm_install_output
       until: helm_install_output.rc == 0
-#       retries: 5
-#       delay: 2
+      retries: 5
+      delay: 2
       when: values is defined
       
-    - name: helm upgrade --install "{{helm_name}}" "{{chart_name}}" 
-      shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}" 
+    - name: helm install "{{helm_name}}" "{{chart_name}}" 
+#       shell: helm upgrade --install "{{helm_name}}" "{{chart_name}}" 
+      shell: helm install "{{helm_name}}" "{{chart_name}}" 
       register: helm_install_output
       until: helm_install_output.rc == 0
       retries: 5
